// Go Fiber Boilerplate - MEDIPROMPT Database Schema
// Paste this into https://dbdiagram.io

// =============================================
// CORE AUTHENTICATION
// =============================================

Table users {
  id uuid [pk, note: 'UUIDv7 generated by application']
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  role user_role [not null, default: 'patient', note: 'super_admin, manager, head_nurse, nurse, doctor, patient']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    email
    created_at
  }
}

Table user_sessions {
  id uuid [pk, note: 'UUIDv7 generated by application']
  user_id uuid [ref: > users.id, not null]
  token_id varchar(255) [not null]
  refresh_token_hash varchar(255)
  ip_address inet
  user_agent text
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    token_id
    expires_at
  }
}

// =============================================
// RBAC (Role-Based Access Control)
// =============================================

Table roles {
  id uuid [pk, note: 'UUIDv7 generated by application']
  name varchar(50) [unique, not null]
  description text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table permissions {
  id uuid [pk, note: 'UUIDv7 generated by application']
  name varchar(100) [unique, not null]
  description text
  resource varchar(50) [not null]
  action varchar(20) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    resource
  }
}

Table user_roles {
  user_id uuid [ref: > users.id, not null]
  role_id uuid [ref: > roles.id, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (user_id, role_id) [pk]
  }
}

Table role_permissions {
  role_id uuid [ref: > roles.id, not null]
  permission_id uuid [ref: > permissions.id, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (role_id, permission_id) [pk]
  }
}

// =============================================
// MEDIPROMPT - ROOMS
// =============================================

Table rooms {
  id uuid [pk, note: 'UUIDv7 generated by application']
  name varchar(100) [not null]
  type room_type [not null, default: 'patient_room', note: 'patient_room, nurse_station, icu, emergency, operating_room']
  floor varchar(20) [not null]
  building varchar(100)
  capacity int [default: 1]
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    type
    floor
    is_active
  }
}

// =============================================
// MEDIPROMPT - DEVICES
// =============================================

Table devices {
  id uuid [pk, note: 'UUIDv7 generated by application']
  room_id uuid [ref: > rooms.id]
  type device_type [not null, note: 'microphone, teleprompter, button, sensor']
  serial_number varchar(100) [unique, not null]
  name varchar(100)
  status device_status [not null, default: 'offline', note: 'online, offline, maintenance, error']
  api_key_hash varchar(255)
  config jsonb [default: '{}']
  last_heartbeat timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    room_id
    type
    status
    serial_number
  }
}

// =============================================
// MEDIPROMPT - STAFF
// =============================================

Table staff {
  id uuid [pk, note: 'UUIDv7 generated by application']
  user_id uuid [ref: - users.id, unique, not null]
  employee_id varchar(50) [unique, not null]
  type staff_type [not null, note: 'nurse, doctor, manager, admin']
  department varchar(100)
  shift shift_type [default: 'morning', note: 'morning, afternoon, night, on_call']
  on_duty boolean [default: false]
  phone varchar(20)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    type
    on_duty
    shift
  }
}

Table staff_room_assignments {
  id uuid [pk, note: 'UUIDv7 generated by application']
  staff_id uuid [ref: > staff.id, not null]
  room_id uuid [ref: > rooms.id, not null]
  is_primary boolean [default: false]
  assigned_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    staff_id
    room_id
    (staff_id, room_id) [unique]
  }
}

// =============================================
// MEDIPROMPT - PATIENTS
// =============================================

Table patients {
  id uuid [pk, note: 'UUIDv7 generated by application']
  room_id uuid [ref: > rooms.id]
  medical_record_number varchar(50) [unique, not null]
  name varchar(255) [not null]
  date_of_birth date
  gender varchar(10)
  condition_level condition_level [not null, default: 'stable', note: 'critical, serious, moderate, stable, good']
  diagnosis text
  notes text
  admission_date timestamp [default: `CURRENT_TIMESTAMP`]
  discharge_date timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    room_id
    medical_record_number
    condition_level
    admission_date
  }
}

// =============================================
// MEDIPROMPT - VITAL SIGNS
// =============================================

Table vital_signs {
  id uuid [pk, note: 'UUIDv7 generated by application']
  patient_id uuid [ref: > patients.id, not null]
  recorded_by_staff_id uuid [ref: > staff.id]
  heart_rate int [note: 'BPM']
  blood_pressure_sys int [note: 'Systolic mmHg']
  blood_pressure_dia int [note: 'Diastolic mmHg']
  temperature decimal [note: 'Celsius']
  oxygen_saturation int [note: 'SpO2 %']
  respiratory_rate int [note: 'Per minute']
  pain_level int [note: '0-10 scale']
  notes text
  recorded_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    patient_id
    recorded_by_staff_id
    recorded_at
  }
}

// =============================================
// MEDIPROMPT - ALERTS (Core Feature)
// =============================================

Table alerts {
  id uuid [pk, note: 'UUIDv7 generated by application']
  room_id uuid [ref: > rooms.id, not null]
  patient_id uuid [ref: > patients.id]
  device_id uuid [ref: > devices.id]
  assigned_staff_id uuid [ref: > staff.id]
  resolved_by_staff_id uuid [ref: > staff.id]
  type alert_type [not null, note: 'voice_call, button_press, emergency, system, scheduled']
  priority alert_priority [not null, default: 'medium', note: 'critical, high, medium, low']
  status alert_status [not null, default: 'pending', note: 'pending, acknowledged, in_progress, resolved, escalated, cancelled']
  message text
  detected_keywords text
  audio_reference varchar(255)
  escalation_count int [default: 0]
  escalation_timeout_minutes int [default: 5]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  acknowledged_at timestamp
  resolved_at timestamp
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    room_id
    patient_id
    assigned_staff_id
    type
    priority
    status
    created_at
    (status, priority)
  }
}

Table alert_history {
  id uuid [pk, note: 'UUIDv7 generated by application']
  alert_id uuid [ref: > alerts.id, not null]
  staff_id uuid [ref: > staff.id]
  action varchar(50) [not null]
  previous_status alert_status
  new_status alert_status
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    alert_id
    staff_id
    created_at
  }
}

// =============================================
// MEDIPROMPT - MESSAGES (Two-Way Communication)
// =============================================

Table messages {
  id uuid [pk, note: 'UUIDv7 generated by application']
  room_id uuid [ref: > rooms.id, not null]
  patient_id uuid [ref: > patients.id]
  sender_staff_id uuid [ref: > staff.id]
  receiver_staff_id uuid [ref: > staff.id]
  direction message_direction [not null, note: 'to_patient, from_patient, staff_to_staff']
  content text [not null]
  is_read boolean [default: false]
  is_urgent boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  read_at timestamp
  
  indexes {
    room_id
    patient_id
    sender_staff_id
    is_read
    created_at
  }
}
